The parenthetical assertion checking isn't working in some cases with YARR Interpreter https://bugs.webkit.org/show_bug.cgi?id=46893

Patch by Peter Varga <pvarga@inf.u-szeged.hu> on 2010-10-15
Reviewed by Gavin Barraclough.

Calculate the countToCheck value of a TypeParentheticalAssertion by
subtracting the number of characters which follows
a TypeParentheticalAssertion term with the number of characters which should
be matched by terms which are contained
in the TypeParentheticalAssertion term (minimumSize).

* yarr/RegexInterpreter.cpp:
(JSC::Yarr::ByteCompiler::emitDisjunction):



Canonical link: https://commits.webkit.org/60421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69842 268f45cc-cd09-0410-ab3c-d52691b4dbfc